--- a/DeviceSettings/res/values-fr-rFR/strings.xml
+++ b/DeviceSettings/res/values-fr-rFR/strings.xml
@@ -72,6 +72,7 @@
     <string name="preset_hybrid_mamba">Hybrid Mamba</string>
 
     <!-- menu -->
+    <string name="kcal_presets">@string/presets_dialog_title</string>
     <string name="kcal_reset">Réglages d\'origine</string>
 
     <!-- CustomSeekBarPreference -->
