--- a/DeviceSettings/res/values-in-rID/strings.xml
+++ b/DeviceSettings/res/values-in-rID/strings.xml
@@ -113,6 +113,7 @@
     <string name="preset_hybrid_mamba">Hibrid</string>
 
     <!-- menu -->
+    <string name="kcal_presets">@string/presets_dialog_title</string>
     <string name="kcal_reset">Reset</string>
 
     <!-- CustomSeekBarPreference -->
