--- a/DeviceSettings/res/values-ja-rJP/strings.xml
+++ b/DeviceSettings/res/values-ja-rJP/strings.xml
@@ -107,6 +107,7 @@
     <string name="preset_hybrid_mamba">Hybrid Mamba</string>
 
     <!-- menu -->
+    <string name="kcal_presets" translatable="false">@string/presets_dialog_title</string>
     <string name="kcal_reset">リセット</string>
 
     <!-- CustomSeekBarPreference -->
