--- a/DeviceSettings/res/values-pt-rBR/strings.xml
+++ b/DeviceSettings/res/values-pt-rBR/strings.xml
@@ -115,6 +115,7 @@
     <string name="preset_hybrid_mamba">Mamba Híbrida</string>
 
     <!-- menu -->
+    <string name="kcal_presets">@string/presets_dialog_title</string>
     <string name="kcal_reset">Redefinir</string>
 
     <!-- CustomSeekBarPreference -->
