--- a/DeviceSettings/res/values-ru-rRU/strings.xml
+++ b/DeviceSettings/res/values-ru-rRU/strings.xml
@@ -115,6 +115,7 @@
     <string name="preset_hybrid_mamba">Гибридная Мамба</string>
 
     <!-- menu -->
+    <string name="kcal_presets">@string/presets_dialog_title</string>
     <string name="kcal_reset">Сбросить</string>
 
     <!-- CustomSeekBarPreference -->
