--- a/DeviceSettings/res/values-sk-rSK/strings.xml
+++ b/DeviceSettings/res/values-sk-rSK/strings.xml
@@ -113,6 +113,7 @@
     <string name="preset_hybrid_mamba">Hybrid Mamba</string>
 
     <!-- menu -->
+    <string name="kcal_presets">@string/presets_dialog_title</string>
     <string name="kcal_reset">Resetovať</string>
 
     <!-- CustomSeekBarPreference -->
